Submit IntendedVisit API work in progress
